src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>APP_Suffix__c</fullName>
        <description>S-366408</description>
        <inlineHelpText>Personal Suffix</inlineHelpText>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Est.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATH__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Athletics Ticket ID</inlineHelpText>
        <label>ATH</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBS__c</fullName>
        <inlineHelpText>Ctr for Advanced Study Behavioral Sci</inlineHelpText>
        <label>CBS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deceased_Source__c</fullName>
        <description>S-340089</description>
        <inlineHelpText>Source of Deceased Information</inlineHelpText>
        <label>Deceased Source</label>
        <picklist>
            <picklistValues>
                <fullName>External Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP/Memorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Campus Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obituary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned Mail/Survey Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deceased_Status_Change__c</fullName>
        <description>S-378313</description>
        <inlineHelpText>Timestamp of when the Deceased flag was last modified</inlineHelpText>
        <label>Deceased Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Degree_String_Long__c</fullName>
        <description>to store long degree strings</description>
        <inlineHelpText>Long Degree String</inlineHelpText>
        <label>Stanford Degrees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_String_Parent__c</fullName>
        <description>To store Parent Degree String</description>
        <inlineHelpText>To store Parent Degree String</inlineHelpText>
        <label>Degree String Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_String_Short__c</fullName>
        <description>To store Short degree strings</description>
        <inlineHelpText>To store Short degree strings</inlineHelpText>
        <label>Degree String Short</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Encoded ID</inlineHelpText>
        <label>EID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>0 -  Unknown/Not Reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 -  Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 -  Other Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2C - Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2H - Hawaiian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2I - East Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2J - Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2K - Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2P - Filipino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2S - South Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2V - Vietnamese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2X - Other Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 -  American Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3C - American Indian (Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3S - American Indian (Central/South)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 -  Other Hispanic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4C - Mexican/Chicano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4L - Latino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4P - Puerto Rican</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4X - Other Hispanic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 -  White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5E - White (European)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5M - White (Middle Eastern)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5N - White (North Africa)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 -  Unidentified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 -  Decline to State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 -  Nonresident</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GSB__c</fullName>
        <label>GSB Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Input_Method__c</fullName>
        <label>Input Method</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mag_Obit_Pub_Date__c</fullName>
        <inlineHelpText>S-340089</inlineHelpText>
        <label>Mag Obit Pub Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Prefix__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, no prefix will be assigned to the contact.</inlineHelpText>
        <label>No Prefix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>PeopleSoft ID</inlineHelpText>
        <label>PS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prof_Suffix__c</fullName>
        <description>S-366408</description>
        <inlineHelpText>Professional Suffix</inlineHelpText>
        <label>Prof Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>AIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EdD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LICSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M ARCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAA2__c</fullName>
        <inlineHelpText>SAA Control Number</inlineHelpText>
        <label>SAA</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAA__c</fullName>
        <label>SAA Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SUID_Pool_Value__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>SUID Pool Value</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SUID__c</fullName>
        <description>S-340088</description>
        <externalId>true</externalId>
        <label>SUID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Self_Reported_Ethnicity_Other__c</fullName>
        <label>Self-Reported Ethnicity Other</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Reported_Ethnicity__c</fullName>
        <label>Self-Reported Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>ET0 - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET1 - Am Indian/Alaska Native -Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET2 - Asian/Asian American -Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET3 - Black/African American -Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET4 - Hispanic/Latino -Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET5 - Hawaiian/PacificIslander-Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET6 - White - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET7 - Decline to State Ethnicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETA - Foreign Born(outside US)-Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETB - Native Born - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETC - Decline to State - Foreign/Native Born</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETD - African - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETE - Chinese - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETF - Chinese American - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETG - Filipino - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETH - Filipino American - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETJ - Japanese - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETK - Japanese American - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETL - Korean - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETM - Korean American - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETN - Latin American/Latino - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETP - Mexican - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETQ - Mexican American/Chicano- Self Identifie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETR - Puerto Rican - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETS - South Asian - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETT - South Asian American - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETU - Vietnamese - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETV - Indian - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETW - Indian American - Self Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETX - Other Asian - Self Identified</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Single_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>S-340070 - This Field is used to store the Single household that a Single contact is in.  It is used in casethe user gets married and later divorced as a pointer to their old single household.</description>
        <label>Single Household</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Household Account does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <infoMessage>Select the Contact&apos;s Single Household</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Single Contact</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field directly populated by trigger reflecting thids account is active.</description>
        <inlineHelpText>Is this Contact active?</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Age_Range__c</fullName>
        <description>Contact age range calculated by formula field and Age field.</description>
        <formula>/* IF(ISBLANK(Age__c) || Age__c&lt;=0, &apos;Unknown&apos;,
IF(Age__c&lt;18,&quot;&lt;18&quot;, 
IF(Age__c&gt;=80,&quot;80+&quot;, 
IF(Age__c&gt;=75,&quot;75-79&quot;, 
IF(Age__c&gt;=70,&quot;70-74&quot;, 
IF(Age__c&gt;=65,&quot;65-69&quot;, 
IF(Age__c&gt;=60,&quot;60-64&quot;, 
IF(Age__c&gt;=55,&quot;55-59&quot;, 
IF(Age__c&gt;=50,&quot;50-54&quot;, 
IF(Age__c&gt;=45,&quot;45-49&quot;, 
IF(Age__c&gt;=40,&quot;40-44&quot;, 
IF(Age__c&gt;=30,&quot;30-39&quot;,
IF(Age__c&gt;=18,&quot;18-29&quot;, 
&quot;Unknown&quot;))))))))))))) */ &quot;Unknown&quot;</formula>
        <inlineHelpText>Displays age range Contact  falls within.</inlineHelpText>
        <label>@Deprecated(Version=2.18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Age__c</fullName>
        <description>Age auto calculated via formula using Birthdate.</description>
        <formula>IF(AND(rC_Bios__Deceased__c,OR(ISNULL(Birthdate),ISNULL(rC_Bios__Deceased_Date__c))), VALUE(TEXT(rC_Bios__Deceased_Year__c)) - VALUE(TEXT(rC_Bios__Birth_Year__c)),
IF(AND(rC_Bios__Deceased__c), FLOOR((BLANKVALUE(rC_Bios__Deceased_Date__c, TODAY()) - BLANKVALUE(Birthdate, TODAY())) / 365.25), 
IF(NOT(ISBLANK(Birthdate)), FLOOR((TODAY() - Birthdate) / 365.25), NULL)))</formula>
        <inlineHelpText>Displays Contact age.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Age_for_Preference_Rule_Engine__c</fullName>
        <description>Autocalculates number of days from contact created date until today. This value will be used in preference rule engine.</description>
        <formula>MAX(0,(NOW() - CreatedDate))</formula>
        <inlineHelpText>Autocalculates number of days from contact created date until today.</inlineHelpText>
        <label>Age for Preference Rule Engine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</description>
        <inlineHelpText>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</inlineHelpText>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Assistant_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field Indicating the Assistant phone should not be called.</description>
        <inlineHelpText>Indicates the Assistant phone should not be called.</inlineHelpText>
        <label>Assistant Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Assistant_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field, check to opt out of email communication to Assistant.</description>
        <inlineHelpText>Check to opt out of email communication to Assistant.</inlineHelpText>
        <label>Assistant Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Assistant_Email__c</fullName>
        <description>Assistant&apos;s Email Address.</description>
        <inlineHelpText>Assistant&apos;s Email Address.</inlineHelpText>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Birth_Day__c</fullName>
        <description>Manually populated contact birth day.</description>
        <inlineHelpText>Contact birth day.</inlineHelpText>
        <label>Birth Day</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Birth_Month__c</fullName>
        <description>Manually populated Contact birth month.</description>
        <inlineHelpText>Contact birth month.</inlineHelpText>
        <label>Birth Month</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Birth_Year__c</fullName>
        <description>Manually populated Contact birth year.</description>
        <inlineHelpText>Contact birth year.</inlineHelpText>
        <label>Birth Year</label>
        <picklist>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Deceased_Date__c</fullName>
        <description>Date Contact is deceased populated by trigger.</description>
        <inlineHelpText>Date Contact is deceased.</inlineHelpText>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Deceased_Day__c</fullName>
        <description>Day Contact is Deceased.</description>
        <inlineHelpText>Day Contact is Deceased.</inlineHelpText>
        <label>Deceased Day</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>